@startuml LibraryRecordSystem

' Library Record System - UML Class Diagram
' Software Module Assignment 2

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classAttributeFontSize 10
skinparam classFontStyle bold
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor #E8F4FD
    BorderColor #2E86AB
    ArrowColor #2E86AB
    HeaderBackgroundColor #2E86AB
    HeaderFontColor #FFFFFF
}

' BOOKS CLASS
class Books {
    - _book_id: str
    - _title: str
    - _author: str
    - _year: int
    - _publisher: str
    - _num_copies: int
    - _available_copies: int
    - _publication_date: str
    --
    + __init__(title: str, author: str, year: int, publisher: str, num_copies: int, publication_date: str)
    - _generate_book_id(): str
    ..Setter Methods..
    + set_title(title: str): None
    + set_author(author: str): None
    + set_year(year: int): None
    + set_publisher(publisher: str): None
    + set_num_copies(num_copies: int): None
    + set_available_copies(available_copies: int): None
    + set_publication_date(publication_date: str): None
    ..Getter Methods..
    + get_book_id(): str
    + get_title(): str
    + get_author(): str
    + get_year(): int
    + get_publisher(): str
    + get_num_copies(): int
    + get_available_copies(): int
    + get_publication_date(): str
    ..Utility Methods..
    + __str__(): str
    + __repr__(): str
}

' BOOKLIST CLASS
class BookList {
    - _books: dict{str: Books}
    --
    + __init__()
    + add_book(book: Books): bool
    + search_book(search_term: str, search_by: str): List[Books]
    + remove_book(title: str): bool
    + get_total_books(): int
    + get_all_books(): List[Books]
    + get_book_by_id(book_id: str): Books
    + display_all_books(): None
    + __str__(): str
    + __repr__(): str
}

' USERS CLASS
class Users {
    - _username: str
    - _firstname: str
    - _surname: str
    - _house_number: str
    - _street_name: str
    - _postcode: str
    - _email_address: str
    - _date_of_birth: str
    --
    + __init__(username: str, firstname: str, surname: str, house_number: str, street_name: str, postcode: str, email_address: str, date_of_birth: str)
    - _set_username(username: str): None
    ..Setter Methods..
    + set_firstname(firstname: str): None
    + set_surname(surname: str): None
    + set_house_number(house_number: str): None
    + set_street_name(street_name: str): None
    + set_postcode(postcode: str): None
    + set_email_address(email_address: str): None
    + set_date_of_birth(date_of_birth: str): None
    ..Getter Methods..
    + get_username(): str
    + get_firstname(): str
    + get_surname(): str
    + get_house_number(): str
    + get_street_name(): str
    + get_postcode(): str
    + get_email_address(): str
    + get_date_of_birth(): str
    ..Utility Methods..
    + get_full_name(): str
    + get_full_address(): str
    + __str__(): str
    + __repr__(): str
}

' USERLIST CLASS
class UserList {
    - _users: dict{str: Users}
    --
    + __init__()
    + add_user(user: Users): bool
    + find_users_by_firstname(firstname: str, partial: bool): List[tuple]
    + remove_user_by_firstname(firstname: str): bool
    + remove_user_by_username(username: str): bool
    + count_users(): int
    + get_user_by_username(username: str): Users
    + get_all_users(): List[Users]
    + search_users_by_firstname(firstname: str): List[Users]
    + display_all_users(): None
    + __str__(): str
    + __repr__(): str
}

' LOANS CLASS
class Loans {
    - _loans: dict{tuple: dict}
    - _book_list: BookList
    - _user_list: UserList
    - _loan_period_days: int
    --
    + __init__(book_list: BookList, user_list: UserList, loan_period_days: int)
    + borrow_book(username: str, book_id: str): bool
    + return_book(username: str, book_id: str): bool
    + count_user_loans(username: str): int
    + get_user_loans(username: str): List[Dict]
    + get_overdue_books(): List[Dict]
    + print_overdue_books(): None
    + get_total_active_loans(): int
    + display_all_loans(): None
    + __str__(): str
    + __repr__(): str
}

' RELATIONSHIPS

' Composition: BookList contains Books (1 to many)
BookList "1" *-- "0..*" Books : contains >

' Composition: UserList contains Users (1 to many)
UserList "1" *-- "0..*" Users : contains >

' Association: Loans uses BookList
Loans "1" --> "1" BookList : uses >

' Association: Loans uses UserList
Loans "1" --> "1" UserList : uses >

' Dependency: Loans accesses Books through BookList
Loans ..> Books : accesses >

' Dependency: Loans accesses Users through UserList
Loans ..> Users : accesses >

' NOTES
note top of Books
  <b>Books Class</b>
  Represents individual book records
  with randomly generated IDs.
  Includes validation for all attributes.
end note

note top of Users
  <b>Users Class</b>
  Represents library members
  with address and contact details.
  Username cannot be changed after creation.
end note

note bottom of Loans
  <b>Loans Class</b>
  Manages book borrowing/returning.
  Tracks overdue books and loan periods.
  Uses BookList and UserList for validation.
end note

note right of BookList
  <b>BookList Class</b>
  Collection manager for Books.
  Supports search by title, author,
  publisher, or publication date.
end note

note left of UserList
  <b>UserList Class</b>
  Collection manager for Users.
  Warns when multiple users share
  the same first name during removal.
end note

@enduml

